bk_ida/gccida/g3/gen_subprogram_die
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10654:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10657:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v16; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10669:1: error: must use 'enum' tag to refer to type 'dwarf_tag'
dwarf_tag die_tag; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10679:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v38; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10685:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10698:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v57; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10703:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10704:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10712:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v71; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10743:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10752:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v111; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10814:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10834:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:10888:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:11044:46: error: use of undeclared identifier 'a'
sprintf( label_id, "*.%s%u", ( const char *)&a.dw_attr_next + 4, v77); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:11096:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:11219:47: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v117->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v19, ( __m128i)( unsigned __int64)v3); 
                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:11219:81: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v117->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v19, ( __m128i)( unsigned __int64)v3); 
                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/dwarf2out.c:11331:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
